# MedCheck

./: .env  .env.docker  .env_empty  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pyproject.toml.bak  requirements.txt
MedCheck/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_image.py  0003_alter_user_address_alter_user_date_of_birth_and_more.py  0004_alter_user_options.py
accounts/templates/accounts/: create_doctor.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  register.html
content/: admin.py  content.py  models.py
content/management/commands/: fill_db_content.py
content/migrations/: 0001_initial.py  0002_alter_fragment_options.py
main/: tests.py  urls.py  views.py
main/management/commands/: fill_database.py  fill_db.py
main/templates/main/: about.html  contact.html  home.html
services/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
services/migrations/: 0001_initial.py  0002_alter_service_options_alter_serviceimage_options_and_more.py  0002_servicecategory_image_delete_serviceimage.py
services/templates/services/: appointment_form.html  categories.html  diagnosis_result_detail.html  service_detail.html  (+1 more)
services/utils/: __init__.py  appointments.py  diagnostic_results.py  doctors.py
static/css/: style.css
templates/: base.html
(+9 files in other folders)
