[tool.poetry]
name = "medcheck"
version = "0.1.0"
description = ""
authors = ["Aleksey Zvyagintsev <alex0236889@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.3"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
pillow = "^12.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

