[tool.poetry]
name = "medcheck"
version = "0.1.0"
description = ""
authors = ["Aleksey Zvyagintsev <alex0236889@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [{include = "MedCheck"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
python-decouple = "^3.8"
pillow = "^12.1.1"
celery = "^5.6.2"
django = "^6.0.3"
python-dotenv = "^1.2.2"
django-extensions = "^4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<8.0"
pytest-django = "^4.12.0"
coverage = "^7.13.5"